@@ -3,6 +3,7 @@
 Feeds 6.x 1.0 xxxx, 200x-xx-xx
 ------------------------------
 
+- #623424 Kars-T, Eugen Mayer, alex_b: Mapper for Taxonomy.
 - #649552 rsoden: Provide variable for data table name.
 - #631962 velosol, alex_b: FeedsNodeProcessor: Update when changed.
 - #623452 mongolito404: Port basic test infrastructure for mappers, test for
